fix: blog tags mobil spacing

--- a/src/pages/blog/_blogPages.scss
+++ b/src/pages/blog/_blogPages.scss
@@ -52,7 +52,7 @@
 }
 
 .blog__tags--mobile {
-  margin: 40px 0;
+  margin-top: 40px;
 }
 
 .blog__tags-title {
